@@ -1,14 +1,0 @@
-# SPDX-License-Identifier: GPL-3.0-or-later
-# by Tobias Powalowski <tpowa@archlinux.org>
-
-[Unit]
-Description=Set vconsole on display resolution
-After=systemd-udev-trigger.service
-
-[Service]
-Type=oneshot
-RemainAfterExit=yes
-ExecStart=/usr/bin/detect-vconsole.sh run
-
-[Install]
-WantedBy=getty.target
