@@ -19,6 +19,7 @@ Environment:
 - added /usr/lib/gnupg programs
 - removed custom modprobe.conf
 - fixed ttyd/sshd login on -latest image
+- removed archboot-detect-vconsole script
 defaults:
 - added all supported firmware packages to _GRAPHIC_IGNORE list
 init:
